--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 <body>
 
 <script type="module" src="index.ts"></script>
-<test-element data='{"foo":42}'></test-element>
+
+<counter-element value="23">aaa</counter-element>
+<counter-element>bbb</counter-element>
 
 </body>
 </html>
