support default attribute values

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 
 <script type="module" src="index.ts"></script>
 
-<counter-element value="23">aaa</counter-element>
-<counter-element>bbb</counter-element>
+
+<counter-element value="23"></counter-element>
+
+<br>
+<br>
+
+<counter-element step="2"></counter-element>
 
 </body>
 </html>
