--- a/index.html
+++ b/index.html
@@ -2,19 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Document</title>
+  <title>Demo</title>
 </head>
 <body>
 
 <script type="module" src="index.ts"></script>
-
-
-<counter-element value="23"></counter-element>
-
-<br>
-<br>
-
-<counter-element step="2"></counter-element>
 
 </body>
 </html>
